[gd_scene load_steps=6 format=3 uid="uid://dr2vketpves6d"]

[ext_resource type="Script" path="res://dialogue/dialogue_box.gd" id="1_xe6mk"]
[ext_resource type="Texture2D" uid="uid://bht3bj1or5yi2" path="res://assets/ui/dialogue_name_background_republic.png" id="2_d8ira"]
[ext_resource type="Texture2D" uid="uid://c3rchstqxk21b" path="res://assets/ui/dialogue_name_background_kingdom.png" id="3_sjmvd"]
[ext_resource type="Texture2D" uid="uid://b73bjgykfd4b1" path="res://assets/ui/dialogue_background_republic.png" id="3_xs7k3"]
[ext_resource type="Texture2D" uid="uid://b3hekh20sjvej" path="res://assets/ui/dialogue_background_kingdom.png" id="4_72jux"]

[node name="DialogueBox" type="Control"]
z_index = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -416.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xe6mk")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(96, 32)
layout_mode = 0
offset_right = 96.0
offset_bottom = 32.0

[node name="NameBackgroundRepublic" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_d8ira")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="NameBackgroundKingdom" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("3_sjmvd")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 3

[node name="Control" type="Control" parent="PanelContainer/GridContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="Name" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Name"
vertical_alignment = 1

[node name="Control2" type="Control" parent="PanelContainer/GridContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="LineBackgroundRepublic" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 160.0
offset_bottom = 120.0
texture = ExtResource("3_xs7k3")

[node name="Dialogue" type="RichTextLabel" parent="LineBackgroundRepublic"]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 220.0
offset_bottom = 86.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Lorem ipsum."

[node name="LineBackgroundKingdom" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 160.0
offset_bottom = 120.0
texture = ExtResource("4_72jux")

[node name="Dialogue" type="RichTextLabel" parent="LineBackgroundKingdom"]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 220.0
offset_bottom = 86.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Lorem ipsum."
